gitops/flux-operator-config/web-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flux-web
  namespace: flux-system
  labels:
    app.kubernetes.io/name: flux-web
    app.kubernetes.io/part-of: flux-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flux-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flux-web
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: manager
        image: ghcr.io/controlplaneio-fluxcd/flux-operator:v0.60.0
        imagePullPolicy: IfNotPresent
        args:
        - --web-server-only
        ports:
        - containerPort: 9080
          name: http-web
          protocol: TCP
        - containerPort: 8080
          name: http-metrics
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /tmp
          name: temp
      serviceAccountName: flux-operator
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: temp
---
apiVersion: v1
kind: Service
metadata:
  name: flux-web
  namespace: flux-system
  labels:
    app.kubernetes.io/name: flux-web
spec:
  ports:
  - name: http-web
    port: 9080
    protocol: TCP
    targetPort: 9080
  - name: http-metrics
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: flux-web
